--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,35 @@
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #container strong {
-  font-size: 20px;
-  line-height: 26px;
+    font-size: 20px;
+    line-height: 26px;
 }
 
 #container p {
-  font-size: 16px;
-  line-height: 22px;
+    font-size: 16px;
+    line-height: 22px;
+    color: #8c8c8c;
+    margin: 0;
+}
 
-  color: #8c8c8c;
-
-  margin: 0;
+img {
+    margin-top: 20px;
+    margin-left: 30px;
+    height: 50px;
 }
 
 #container a {
-  text-decoration: none;
+    text-decoration: none;
+}
+
+ion-item {
+    margin-left: 20px;
+    margin-right: 20px;
 }
