--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -19,6 +19,15 @@
     margin: 0;
 }
 
+.main {
+    text-align: center;
+}
+
+h2 {
+    margin-top: 20px;
+    color: rgb(226, 4, 4);
+}
+
 img {
     margin-top: 20px;
     margin-left: 30px;
