--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
 
 <ion-content [fullscreen]="true">
     <div class="main">
-        <h2>1315421</h2>
+        <h2>{{trailer}}</h2>
         <h2 style="color: black;">FRENTE</h2>
         <ion-img style="height: 250px;" src="assets/trailer.jpg"></ion-img>
     </div>
