--- a/src/app/busqueda/busqueda.page.scss
+++ b/src/app/busqueda/busqueda.page.scss
@@ -1,19 +1,8 @@
-.zoom {
-    /* Aumentamos la anchura y altura durante 2 segundos */
-    transition: width 2s, height 2s, transform 2s;
-    -moz-transition: width 2s, height 2s, -moz-transform 2s;
-    -webkit-transition: width 2s, height 2s, -webkit-transform 2s;
-    -o-transition: width 2s, height 2s, -o-transform 2s;
+.fuente1 {
+    font-weight: bold;
+    font-size: 18px;
 }
 
-.zoom:hover {
-    /* tranformamos el elemento al pasar el mouse por encima al doble de
-       su tamaño con scale(2). */
-    transform: scale(2);
-    -moz-transform: scale(2);
-    /* Firefox */
-    -webkit-transform: scale(2);
-    /* Chrome - Safari */
-    -o-transform: scale(2);
-    /* Opera */
+.fuente2 {
+    font-weight: bold;
 }
