--- a/src/app/start/start.page.scss
+++ b/src/app/start/start.page.scss
@@ -1,3 +1,12 @@
 .button {
     position: right;
 }
+
+ion-item {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.fuente {
+    font-weight: bold;
+}
