--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -23,9 +23,14 @@
     text-align: center;
 }
 
+.fecha {
+    text-align: right;
+}
+
 h2 {
     margin-top: 10px;
     color: rgb(226, 4, 4);
+    text-transform: uppercase;
 }
 
 img {
